# mcp_gateway_maker

./: .gitignore  .markdownlint.yaml  .mcp.json  CLAUDE.md  README.md  README_HIVE.md  README_NOTION.md  notion-simplify-plan.md  notion-use-SKILL.md  pyproject.toml
.claude/skills/hive-tasks/: SKILL.md
.claude/skills/notion/: SKILL.md
examples/: basic_proxy.yaml  multi_upstream.yaml  oauth_upstream.yaml  security_filter.yaml
fetch-guard-logs/: audit.jsonl  inventory.json  probe_report.md
mcp_proxy/: __main__.py  cli.py  server.py
mcp_proxy/config/: loader.py  schema.py
mcp_proxy/plugins/: adapter.py  base.py  fetch_guard_plugin.py  filter_plugin.py  hive_access_plugin.py  logging_plugin.py  notion_access_plugin.py  rewrite_plugin.py
mcp_proxy/plugins/notion_access_plugin/: __init__.py  api.py  core.py  image_tools.py
tests/: test_config.py  test_hive_access_plugin.py  test_notion_access_plugin.py  test_plugins.py  test_server.py
